# python_skeleton

./: .gitattributes  README.md  defaults  deploy_new_python_project.conf.sample  deploy_new_python_project.sh
skeleton/: .gitignore  Dockerfile  README.md  install.sh  podman_build.sh  podman_push.sh  podman_run.sh  project_codename.py  project_codename.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  wrapper.sh
skeleton/config/: config.conf_sample
skeleton/project_codename/: project_codename.py
